Added class pages and updated styles

--- a/classes/class2-3_years/index.html
+++ b/classes/class2-3_years/index.html
@@ -65,10 +65,30 @@
     </header>
 
     <main>
-        <div class="section classes-page">
+        <section class="2-3class">
             <div class="content-wrapper">
-                <h1>Gallery</h1>
+                <h2>Our 2-3 Year-Old Class: Engaging, Creative, and Fun Learning</h2>
+                <p>In this section, we offer a vibrant and stimulating environment where your child can explore, learn,
+                    and grow through a variety of activities. Our curriculum is designed to encourage creativity,
+                    language development, and physical coordination. We provide the following experiences:</p>
+
+                <ul>
+                    <li>Fun Greek-English songs to enhance language skills</li>
+                    <li>Engaging fairy tales that spark imagination and creativity</li>
+                    <li>Musical movement activities to promote rhythm and motor coordination</li>
+                    <li>Dance sessions that encourage physical expression and movement</li>
+                    <li>Poems to develop language and auditory skills</li>
+                    <li>Gymnastics to improve physical strength and flexibility</li>
+                    <li>Adhesive crafts to build fine motor skills</li>
+                    <li>Imitation games that enhance cognitive and social development</li>
+                    <li>Educational games to stimulate learning through play</li>
+                    <li>Books that encourage a love of reading and storytelling</li>
+                    <li>Painting activities with pastels, watercolors, finger paints, and stamps</li>
+                    <li>Handmade constructions to foster creativity and problem-solving skills</li>
+                    <li>And much more... designed to inspire your child's growth and curiosity</li>
+                </ul>
             </div>
+        </section>
     </main>
 
 </body>
