--- a/classes/class3-4_years/index.html
+++ b/classes/class3-4_years/index.html
@@ -63,13 +63,38 @@
 
         </nav>
     </header>
+    <section class="2-3class">
+        <div class="content-wrapper">
+            <h2>Our 3-4 Year-Old Class: Exploring, Creating, and Growing</h2>
+            <p>In this section, we offer an engaging environment where your child can begin to explore their creativity,
+                learn new skills, and develop a deeper understanding of the world around them. Our activities are
+                designed
+                to nurture their cognitive, physical, and social growth, including:</p>
 
-    <main>
-        <div class="section classes-page">
-            <div class="content-wrapper">
-                <h1>Gallery</h1>
-            </div>
-    </main>
+            <ul>
+                <li>Painting to foster creativity and fine motor skills</li>
+                <li>Working with clay to enhance tactile exploration and hand-eye coordination</li>
+                <li>Adhesive crafts to build fine motor skills and creativity</li>
+                <li>Fairy tales – audiovisual stories from CDs and DVDs to spark imagination</li>
+                <li>Puppet shows that encourage storytelling and imaginative play</li>
+                <li>Music with movement to develop rhythm, coordination, and expression</li>
+                <li>Gymnastics and dance to enhance physical strength, flexibility, and balance</li>
+                <li>Poems that develop language and listening skills</li>
+                <li>Introduction to basic cuisine skills through fun cooking activities</li>
+                <li>Basic English to begin language development and communication</li>
+                <li>Computer activities to encourage basic digital literacy and learning</li>
+                <li>Educational and free play games that promote critical thinking and creativity</li>
+                <li>Imitation games that support social and cognitive development</li>
+                <li>Portfolio creation to track progress and encourage self-expression</li>
+                <li>Early writing activities to develop literacy skills</li>
+                <li>Books to foster a love of reading and storytelling</li>
+                <li>And many more seasonal activities designed to keep your child engaged and learning</li>
+            </ul>
+        </div>
+    </section>
+
+
+
 
 </body>
 <!--Footer-->
