--- a/classes/index.html
+++ b/classes/index.html
@@ -67,8 +67,74 @@
     <main>
         <div class="section classes-page">
             <div class="content-wrapper">
-                <h1>Gallery</h1>
+                <h1>Our Classes</h1>
+                <p>
+                    At our school, we offer a nurturing and structured environment through small-member departments
+                    tailored
+                    to
+                    each developmental stage.
+                </p>
+                <p>
+                    Our class sections are thoughtfully organized by age to ensure that every child receives
+                    personalized
+                    attention and age-appropriate learning experiences:
+                </p>
+
+                <div class="class-grid">
+
+                    <div class="class-box">
+                        <img src="/img/baby_class.jpg" alt="Infant Class" />
+                        <a class="class-button" href="/classes/class4months/">Infant Section (4 months – 2 years)</a>
+                    </div>
+
+                    <div class="class-box">
+                        <img src="/img/class2-3.jpg" alt="2–3 Year Old Class" />
+                        <a class="class-button" href="/classes/class2-3_years/">2–3 Year Old Section</a>
+                    </div>
+
+                    <div class="class-box">
+                        <img class="class-box-img" src="/img/christopher-ryan-JoS5xzulJx4-unsplash.jpg"
+                            alt="3–4 Year Old Class" />
+                        <a class="class-button" href="/classes/class3-4_years/">3–4 Year Old Section</a>
+                    </div>
+
+                    <div class="class-box">
+                        <img src="/img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg" alt="4–5 Year Old Class" />
+                        <a class="class-button" href="/classes/class3-4_years/">4–5 Year Old Section</a>
+                    </div>
+
+                </div>
+
+                <p class="note">* The 3–4 and 4–5 year old groups often share activities and learning spaces, fostering
+                    collaboration and social development.</p>
+
+
+                <div class="support-care">
+                    <h2>Support & Care</h2>
+                    <p>
+                        In addition to our teaching staff, we’re supported by a caring and professional team that helps
+                        create a
+                        safe and enriching learning environment:
+                    </p>
+                    <ul>
+                        <li>A dedicated cleaning assistant ensuring cleanliness and hygiene</li>
+                        <li>A speech therapist and special education professional who visit regularly and collaborate
+                            closely
+                            with
+                            our team</li>
+                        <li>A partnering pediatrician available when needed to support the well-being of our children
+                        </li>
+                    </ul>
+
+                    <p>
+                        We’re proud to provide a caring, holistic approach to early childhood education where every
+                        child is
+                        seen,
+                        supported, and celebrated.
+                    </p>
+                </div>
             </div>
+        </div>
     </main>
 
 </body>
