--- a/our_school/index.html
+++ b/our_school/index.html
@@ -38,22 +38,22 @@
                     </button>
                     <ul class="links">
                         <li>
-                            <a href="../index.html" data-i18n="home">Home</a>
+                            <a href="/index.html" data-i18n="home">Home</a>
                         </li>
                         <li>
-                            <a href="../our_school/index.html" data-i18n="school">Our School</a>
+                            <a href="/our_school/" data-i18n="school">Our School</a>
                         </li>
                         <li>
-                            <a href="../gallery/index.html" data-i18n="gallery">Gallery</a>
+                            <a href="/gallery/" data-i18n="gallery">Gallery</a>
                         </li>
                         <li>
-                            <a href="../teachers_classes/index.html" data-i18n="teachers-classes">Teachers & Classes</a>
+                            <a href="/classes/" data-i18n="teachers-classes">Classes</a>
                         </li>
                         <li>
-                            <a href="../contact/index.html" data-i18n="contact_us">Contact Us</a>
+                            <a href="/contact/" data-i18n="contact_us">Contact Us</a>
                         </li>
-                        <li><a href="index.html" onclick="changeLanguage('en')" data-i18n="english">English</a></li>
-                        <li><a href="index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a></li>
+                        <li><a href="/index.html" onclick="changeLanguage('en')" data-i18n="english">English</a></li>
+                        <li><a href="/index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a></li>
                         <li class="phone">
                             <a href="tel:+35799578375" data-i18n="call_us">CALL US</a>
                         </li>
@@ -184,12 +184,11 @@
             <div class="quick-links">
                 <h5 data-i18n="quick_links">Quick Links</h5>
                 <ul>
-                    <li class="footer-quick-links"><a href="../our_school/index.html" data-i18n="quick_school">Our
+                    <li class="footer-quick-links"><a href="/our_school/" data-i18n="quick_school">Our
                             School</a></li>
-                    <li class="footer-quick-links"><a href="../gallery/" data-i18n="quick_gallery">Gallery</a></li>
-                    <li class="footer-quick-links"><a href="../teachers_classes/index.html"
-                            data-i18n="quick_classes">Classes and Teachers</a></li>
-                    <li class="footer-quick-links"><a href="../contact/index.html" data-i18n="quick_contact">Contact
+                    <li class="footer-quick-links"><a href="/gallery/" data-i18n="quick_gallery">Gallery</a></li>
+                    <li class="footer-quick-links"><a href="/classes/" data-i18n="quick_classes">Classes</a></li>
+                    <li class="footer-quick-links"><a href="/contact/" data-i18n="quick_contact">Contact
                             Us</a></li>
                 </ul>
             </div>
