Added translations and styles to classes pages

--- a/classes/class2-3_years/index.html
+++ b/classes/class2-3_years/index.html
@@ -43,17 +43,17 @@
                         <li>
                             <a href="/our_school/" data-i18n="school">Our School</a>
                         </li>
+
                         <li>
-                            <a href="/gallery/" data-i18n="gallery">Gallery</a>
-                        </li>
-                        <li>
-                            <a href="/classes/" data-i18n="teachers-classes">Teachers & Classes</a>
+                            <a href="/classes/" data-i18n="teachers-classes">Classes</a>
                         </li>
                         <li>
                             <a href="/contact/" data-i18n="contact_us">Contact Us</a>
                         </li>
-                        <li><a href="/index.html" onclick="changeLanguage('en')" data-i18n="english">English</a></li>
-                        <li><a href="/index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a></li>
+                        <li><a href="/classes/class2-3_years/index.html" onclick="changeLanguage('en')"
+                                data-i18n="english">English</a></li>
+                        <li><a href="/classes/class2-3_years/index.html" onclick="changeLanguage('gr')"
+                                data-i18n="greek">Greek</a></li>
                         <li class="phone">
                             <a href="tel:+35799578375" data-i18n="call_us">CALL US</a>
                         </li>
@@ -65,29 +65,38 @@
     </header>
 
     <main>
-        <section class="2-3class">
+        <section class="two-three_class">
             <div class="content-wrapper">
-                <h2>Our 2-3 Year-Old Class: Engaging, Creative, and Fun Learning</h2>
-                <p>In this section, we offer a vibrant and stimulating environment where your child can explore, learn,
-                    and grow through a variety of activities. Our curriculum is designed to encourage creativity,
-                    language development, and physical coordination. We provide the following experiences:</p>
+                <div class="class2-3-text">
+                    <h2>Our 2-3 Year-Old Class: Engaging, Creative, and Fun Learning</h2>
+                    <p>In this section, we offer a vibrant and stimulating environment where your child can explore,
+                        learn,
+                        and grow through a variety of activities. Our curriculum is designed to encourage creativity,
+                        language development, and physical coordination. We provide the following experiences:</p>
 
-                <ul>
-                    <li>Fun Greek-English songs to enhance language skills</li>
-                    <li>Engaging fairy tales that spark imagination and creativity</li>
-                    <li>Musical movement activities to promote rhythm and motor coordination</li>
-                    <li>Dance sessions that encourage physical expression and movement</li>
-                    <li>Poems to develop language and auditory skills</li>
-                    <li>Gymnastics to improve physical strength and flexibility</li>
-                    <li>Adhesive crafts to build fine motor skills</li>
-                    <li>Imitation games that enhance cognitive and social development</li>
-                    <li>Educational games to stimulate learning through play</li>
-                    <li>Books that encourage a love of reading and storytelling</li>
-                    <li>Painting activities with pastels, watercolors, finger paints, and stamps</li>
-                    <li>Handmade constructions to foster creativity and problem-solving skills</li>
-                    <li>And much more... designed to inspire your child's growth and curiosity</li>
-                </ul>
+                    <ul>
+                        <li>Fun Greek-English songs to enhance language skills</li>
+                        <li>Engaging fairy tales that spark imagination and creativity</li>
+                        <li>Musical movement activities to promote rhythm and motor coordination</li>
+                        <li>Dance sessions that encourage physical expression and movement</li>
+                        <li>Poems to develop language and auditory skills</li>
+                        <li>Gymnastics to improve physical strength and flexibility</li>
+                        <li>Adhesive crafts to build fine motor skills</li>
+                        <li>Imitation games that enhance cognitive and social development</li>
+                        <li>Educational games to stimulate learning through play</li>
+                        <li>Books that encourage a love of reading and storytelling</li>
+                        <li>Painting activities with pastels, watercolors, finger paints, and stamps</li>
+                        <li>Handmade constructions to foster creativity and problem-solving skills</li>
+                        <li>And much more... designed to inspire your child's growth and curiosity</li>
+                    </ul>
+                </div>
+                <div class="toddler-img-container">
+                    <img class="toddler-img" src="/img/crayons.jpg" alt="autumn themed crafts">
+                    <img class="toddler-img" src="/img/outdoor_play.jpg" alt="autumn themed crafts">
+                    <img class="toddler-img" src="/img/drawing.jpg" alt="autumn themed crafts">
+                </div>
             </div>
+
         </section>
     </main>
 
@@ -129,7 +138,6 @@
             <h5 data-i18n="quick_links">Quick Links</h5>
             <ul>
                 <li class="footer-quick-links"><a href="/our_school/" data-i18n="quick_school">Our School</a></li>
-                <li class="footer-quick-links"><a href="/gallery/" data-i18n="quick_gallery">Gallery</a></li>
                 <li class="footer-quick-links"><a href="/classes/" data-i18n="quick_classes">Classes and Teachers</a>
                 </li>
                 <li class="footer-quick-links"><a href="/contact/" data-i18n="quick_contact">Contact
