--- a/classes/class3-4_years/index.html
+++ b/classes/class3-4_years/index.html
@@ -44,16 +44,15 @@
                             <a href="/our_school/" data-i18n="school">Our School</a>
                         </li>
                         <li>
-                            <a href="/gallery/" data-i18n="gallery">Gallery</a>
-                        </li>
-                        <li>
-                            <a href="/classes/" data-i18n="teachers-classes">Teachers & Classes</a>
+                            <a href="/classes/" data-i18n="teachers-classes">Classes</a>
                         </li>
                         <li>
                             <a href="/contact/" data-i18n="contact_us">Contact Us</a>
                         </li>
-                        <li><a href="/index.html" onclick="changeLanguage('en')" data-i18n="english">English</a></li>
-                        <li><a href="/index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a></li>
+                        <li><a href="/classes/class3-4_years/" onclick="changeLanguage('en')"
+                                data-i18n="english">English</a></li>
+                        <li><a href="/classes/class3-4_years/" onclick="changeLanguage('gr')"
+                                data-i18n="greek">Greek</a></li>
                         <li class="phone">
                             <a href="tel:+35799578375" data-i18n="call_us">CALL US</a>
                         </li>
@@ -63,35 +62,56 @@
 
         </nav>
     </header>
-    <section class="2-3class">
-        <div class="content-wrapper">
-            <h2>Our 3-4 Year-Old Class: Exploring, Creating, and Growing</h2>
-            <p>In this section, we offer an engaging environment where your child can begin to explore their creativity,
-                learn new skills, and develop a deeper understanding of the world around them. Our activities are
-                designed
-                to nurture their cognitive, physical, and social growth, including:</p>
 
-            <ul>
-                <li>Painting to foster creativity and fine motor skills</li>
-                <li>Working with clay to enhance tactile exploration and hand-eye coordination</li>
-                <li>Adhesive crafts to build fine motor skills and creativity</li>
-                <li>Fairy tales – audiovisual stories from CDs and DVDs to spark imagination</li>
-                <li>Puppet shows that encourage storytelling and imaginative play</li>
-                <li>Music with movement to develop rhythm, coordination, and expression</li>
-                <li>Gymnastics and dance to enhance physical strength, flexibility, and balance</li>
-                <li>Poems that develop language and listening skills</li>
-                <li>Introduction to basic cuisine skills through fun cooking activities</li>
-                <li>Basic English to begin language development and communication</li>
-                <li>Computer activities to encourage basic digital literacy and learning</li>
-                <li>Educational and free play games that promote critical thinking and creativity</li>
-                <li>Imitation games that support social and cognitive development</li>
-                <li>Portfolio creation to track progress and encourage self-expression</li>
-                <li>Early writing activities to develop literacy skills</li>
-                <li>Books to foster a love of reading and storytelling</li>
-                <li>And many more seasonal activities designed to keep your child engaged and learning</li>
-            </ul>
+    <section class="three-four-class">
+        <div class="content-wrapper">
+            <div class="class3-4-text">
+                <h2 data-i18n="three_four_title">Our 3–4 & 4–5 Year-Old Class: Exploring, Creating, and Growing</h2>
+                <p data-i18n="three_four_intro">
+                    In this section, we offer an engaging environment where your child can begin to explore their
+                    creativity,
+                    learn new skills, and develop a deeper understanding of the world around them. Our activities are
+                    designed to nurture their cognitive, physical, and social growth, including:
+                </p>
+
+                <ul>
+                    <li data-i18n="three_four_list_1">Painting to foster creativity and fine motor skills</li>
+                    <li data-i18n="three_four_list_2">Working with clay to enhance tactile exploration and hand-eye
+                        coordination</li>
+                    <li data-i18n="three_four_list_3">Adhesive crafts to build fine motor skills and creativity</li>
+                    <li data-i18n="three_four_list_4">Fairy tales – audiovisual stories from CDs and DVDs to spark
+                        imagination</li>
+                    <li data-i18n="three_four_list_5">Puppet shows that encourage storytelling and imaginative play</li>
+                    <li data-i18n="three_four_list_6">Music with movement to develop rhythm, coordination, and
+                        expression</li>
+                    <li data-i18n="three_four_list_7">Gymnastics and dance to enhance physical strength, flexibility,
+                        and balance</li>
+                    <li data-i18n="three_four_list_8">Poems that develop language and listening skills</li>
+                    <li data-i18n="three_four_list_9">Introduction to basic cuisine skills through fun cooking
+                        activities</li>
+                    <li data-i18n="three_four_list_10">Basic English to begin language development and communication
+                    </li>
+                    <li data-i18n="three_four_list_11">Computer activities to encourage basic digital literacy and
+                        learning</li>
+                    <li data-i18n="three_four_list_12">Educational and free play games that promote critical thinking
+                        and creativity</li>
+                    <li data-i18n="three_four_list_13">Imitation games that support social and cognitive development
+                    </li>
+                    <li data-i18n="three_four_list_14">Portfolio creation to track progress and encourage
+                        self-expression</li>
+                    <li data-i18n="three_four_list_15">Early writing activities to develop literacy skills</li>
+                    <li data-i18n="three_four_list_16">Books to foster a love of reading and storytelling</li>
+                    <li data-i18n="three_four_list_17">And many more seasonal activities designed to keep your child
+                        engaged and learning</li>
+                </ul>
+            </div>
+            <div class="class3-4-img-wrapper">
+                <img class="class3-4-img" src="/img/drawing_2.jpg" alt="child drawing a butterfly">
+                <img class="class3-4-img" src="/img/child-reading.jpg" alt="child reading side view">
+            </div>
         </div>
     </section>
+
 
 
 
@@ -134,8 +154,7 @@
             <h5 data-i18n="quick_links">Quick Links</h5>
             <ul>
                 <li class="footer-quick-links"><a href="/our_school/" data-i18n="quick_school">Our School</a></li>
-                <li class="footer-quick-links"><a href="/gallery/" data-i18n="quick_gallery">Gallery</a></li>
-                <li class="footer-quick-links"><a href="/classes/" data-i18n="quick_classes">Classes and Teachers</a>
+                <li class="footer-quick-links"><a href="/classes/" data-i18n="quick_classes">Classes</a>
                 </li>
                 <li class="footer-quick-links"><a href="/contact/" data-i18n="quick_contact">Contact
                         Us</a></li>
