--- a/classes/index.html
+++ b/classes/index.html
@@ -44,16 +44,15 @@
                             <a href="/our_school/" data-i18n="school">Our School</a>
                         </li>
                         <li>
-                            <a href="/gallery/" data-i18n="gallery">Gallery</a>
-                        </li>
-                        <li>
-                            <a href="/classes/" data-i18n="teachers-classes">Teachers & Classes</a>
+                            <a href="/classes/" data-i18n="teachers-classes">Classes</a>
                         </li>
                         <li>
                             <a href="/contact/" data-i18n="contact_us">Contact Us</a>
                         </li>
-                        <li><a href="/index.html" onclick="changeLanguage('en')" data-i18n="english">English</a></li>
-                        <li><a href="/index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a></li>
+                        <li><a href="/classes/index.html" onclick="changeLanguage('en')" data-i18n="english">English</a>
+                        </li>
+                        <li><a href="/classes/index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a>
+                        </li>
                         <li class="phone">
                             <a href="tel:+35799578375" data-i18n="call_us">CALL US</a>
                         </li>
@@ -67,75 +66,72 @@
     <main>
         <div class="section classes-page">
             <div class="content-wrapper">
-                <h1>Our Classes</h1>
-                <p>
+                <h1 data-i18n="classes_title">Our Classes</h1>
+                <p data-i18n="classes_intro1">
                     At our school, we offer a nurturing and structured environment through small-member departments
-                    tailored
-                    to
-                    each developmental stage.
+                    tailored to each developmental stage.
                 </p>
-                <p>
+                <p data-i18n="classes_intro2">
                     Our class sections are thoughtfully organized by age to ensure that every child receives
-                    personalized
-                    attention and age-appropriate learning experiences:
+                    personalized attention and age-appropriate learning experiences:
                 </p>
 
                 <div class="class-grid">
-
                     <div class="class-box">
                         <img src="/img/baby_class.jpg" alt="Infant Class" />
-                        <a class="class-button" href="/classes/class4months/">Infant Section (4 months – 2 years)</a>
+                        <a class="class-button" href="/classes/class4months/" data-i18n="class_infant">Infant Section (4
+                            months – 2 years)</a>
                     </div>
 
                     <div class="class-box">
                         <img src="/img/class2-3.jpg" alt="2–3 Year Old Class" />
-                        <a class="class-button" href="/classes/class2-3_years/">2–3 Year Old Section</a>
+                        <a class="class-button" href="/classes/class2-3_years/" data-i18n="class_2_3">2–3 Year Old
+                            Section</a>
                     </div>
 
                     <div class="class-box">
                         <img class="class-box-img" src="/img/christopher-ryan-JoS5xzulJx4-unsplash.jpg"
                             alt="3–4 Year Old Class" />
-                        <a class="class-button" href="/classes/class3-4_years/">3–4 Year Old Section</a>
+                        <a class="class-button" href="/classes/class3-4_years/" data-i18n="class_3_4">3–4 Year Old
+                            Section</a>
                     </div>
 
                     <div class="class-box">
                         <img src="/img/gabe-pierce-mLqWFEtlIEs-unsplash.jpg" alt="4–5 Year Old Class" />
-                        <a class="class-button" href="/classes/class3-4_years/">4–5 Year Old Section</a>
+                        <a class="class-button" href="/classes/class3-4_years/" data-i18n="class_4_5">4–5 Year
+                            Old
+                            Section</a>
                     </div>
-
                 </div>
 
-                <p class="note">* The 3–4 and 4–5 year old groups often share activities and learning spaces, fostering
-                    collaboration and social development.</p>
-
+                <p class="note" data-i18n="classes_note">
+                    * The 3–4 and 4–5 year old groups often share activities and learning spaces, fostering
+                    collaboration and social development.
+                </p>
 
                 <div class="support-care">
-                    <h2>Support & Care</h2>
-                    <p>
+                    <h2 data-i18n="support_title">Support & Care</h2>
+                    <p data-i18n="support_intro">
                         In addition to our teaching staff, we’re supported by a caring and professional team that helps
-                        create a
-                        safe and enriching learning environment:
+                        create a safe and enriching learning environment:
                     </p>
                     <ul>
-                        <li>A dedicated cleaning assistant ensuring cleanliness and hygiene</li>
-                        <li>A speech therapist and special education professional who visit regularly and collaborate
-                            closely
-                            with
-                            our team</li>
-                        <li>A partnering pediatrician available when needed to support the well-being of our children
+                        <li data-i18n="support_cleaning">A dedicated cleaning assistant ensuring cleanliness and hygiene
                         </li>
+                        <li data-i18n="support_specialists">A speech therapist and special education professional who
+                            visit regularly and collaborate closely with our team</li>
+                        <li data-i18n="support_doctor">A partnering pediatrician available when needed to support the
+                            well-being of our children</li>
                     </ul>
-
-                    <p>
+                    <p data-i18n="support_final">
                         We’re proud to provide a caring, holistic approach to early childhood education where every
-                        child is
-                        seen,
-                        supported, and celebrated.
+                        child is seen, supported, and celebrated.
                     </p>
                 </div>
             </div>
         </div>
     </main>
+
 
 </body>
 <!--Footer-->
@@ -175,8 +171,8 @@
             <h5 data-i18n="quick_links">Quick Links</h5>
             <ul>
                 <li class="footer-quick-links"><a href="/our_school/" data-i18n="quick_school">Our School</a></li>
-                <li class="footer-quick-links"><a href="/gallery/" data-i18n="quick_gallery">Gallery</a></li>
-                <li class="footer-quick-links"><a href="/classes/" data-i18n="quick_classes">Classes and Teachers</a>
+
+                <li class="footer-quick-links"><a href="/classes/" data-i18n="quick_classes">Classes</a>
                 </li>
                 <li class="footer-quick-links"><a href="/contact/" data-i18n="quick_contact">Contact
                         Us</a></li>
