--- a/classes/class4months/index.html
+++ b/classes/class4months/index.html
@@ -68,27 +68,34 @@
         <section class="baby-class section">
             <div class="content-wrapper">
                 <div class="baby-text">
-                    <h2>Our Baby Class: Safe, Stimulating, and Comfortable for Your Little One</h2>
-                    <p>In this section, we provide a nurturing environment for babies from four months to two years old,
+                    <h2 data-i18n="baby_title">Our Baby Class: Safe, Stimulating, and Comfortable for Your Little One
+                    </h2>
+                    <p data-i18n="baby_intro">
+                        In this section, we provide a nurturing environment for babies from four months to two years
+                        old,
                         ensuring that every child feels safe, happy, and cared for. Our space is thoughtfully designed
-                        to
-                        support your baby's growth and development with:</p>
+                        to support your baby's growth and development with:
+                    </p>
                     <ul>
-                        <li>A specially designed area for infants, tailored to their unique needs</li>
-                        <li>Soft, safety-approved flooring to ensure comfort and protection</li>
-                        <li>Age-appropriate toys that encourage curiosity and play</li>
-                        <li>Musical movement activities to promote rhythm and coordination</li>
-                        <li>Fun exercises and children’s rhythms to help your baby develop motor skills</li>
-                        <li>A personal bed for each infant, ensuring rest and relaxation</li>
-                        <li>Specially designed chairs for comfortable seating</li>
+                        <li data-i18n="baby_list_1">A specially designed area for infants, tailored to their unique
+                            needs</li>
+                        <li data-i18n="baby_list_2">Soft, safety-approved flooring to ensure comfort and protection</li>
+                        <li data-i18n="baby_list_3">Age-appropriate toys that encourage curiosity and play</li>
+                        <li data-i18n="baby_list_4">Musical movement activities to promote rhythm and coordination</li>
+                        <li data-i18n="baby_list_5">Fun exercises and children’s rhythms to help your baby develop motor
+                            skills</li>
+                        <li data-i18n="baby_list_6">A personal bed for each infant, ensuring rest and relaxation</li>
+                        <li data-i18n="baby_list_7">Specially designed chairs for comfortable seating</li>
                     </ul>
-                    <p><strong>Sheets and blankets are provided by the station for your convenience and peace of
-                            mind.</strong></p>
+                    <p data-i18n="baby_note"><strong>Sheets and blankets are provided by the station for your
+                            convenience and peace of mind.</strong></p>
                 </div>
-                <div class="baby-img">
-                    <img src="/img/christian-bowen-OJOE587CWuE-unsplash.jpg" alt="baby class" </div>
+                <div>
+                    <img class="baby-img" src="/img/christian-bowen-OJOE587CWuE-unsplash.jpg" alt="baby class" />
                 </div>
+            </div>
         </section>
+
     </main>
 
 </body>
