--- a/contact/index.html
+++ b/contact/index.html
@@ -44,13 +44,10 @@
                             <a href="/our_school/" data-i18n="school">Our School</a>
                         </li>
                         <li>
-                            <a href="/gallery/" data-i18n="gallery">Gallery</a>
+                            <a href="/classes/" data-i18n="teachers-classes">Classes</a>
                         </li>
                         <li>
-                            <a href="/classes/" data-i18n="teachers-classes">Teachers & Classes</a>
-                        </li>
-                        <li>
-                            <a href="/contact/" data-i18n="contact_us">Contact Us</a>
+                            <a href="index.html" data-i18n="contact_us">Contact Us</a>
                         </li>
                         <li><a href="/index.html" onclick="changeLanguage('en')" data-i18n="english">English</a></li>
                         <li><a href="/index.html" onclick="changeLanguage('gr')" data-i18n="greek">Greek</a></li>
@@ -174,8 +171,6 @@
                 <ul>
                     <li class="footer-quick-links"><a href="/our_school/" data-i18n="quick_school">Our
                             School</a></li>
-                    <li class="footer-quick-links"><a href="/gallery/" data-i18n="quick_gallery">Gallery</a>
-                    </li>
                     <li class="footer-quick-links"><a href="/classes/" data-i18n="quick_classes">Classes</a></li>
                     <li class="footer-quick-links"><a href="/contact/" data-i18n="quick_contact">Contact
                             Us</a></li>
